# py-interrail

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  requirements.txt  setup.cfg
.github/workflows/: python-package.yml
interrail/: api.py  data.py
interrail/data/: routes.py  stations.py
tests/: test_api.py
