[metadata]
name = interrail
version = 0.0.3
author = Thijmen Star
description = A wrapper around the Interrail api
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ThijmenStar/py-interrail
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    requests
    importlib; python_version == "2.6"
